cargo-features = ["edition2024"]

[package]
name = "irc_client"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4.0"
env_logger = "0.11.0"

owo-colors = "4.0.0"

thiserror = "1.0.57"
eyre = "0.6"
color-eyre = "0.6"

clap = { version = "4.4.18", features = ["derive"] }

indexmap = "2.2.5"
