cargo-features = ["edition2024"]

[package]
name = "irc_client"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4.21"
fern = "0.6.2"
humantime = "2.1.0"

thiserror = "1.0.57"
eyre = "0.6"
color-eyre = "0.6"

webpki-roots = "0.26.1"
rustls = "0.23.2"

clap = { version = "4.4.18", features = ["derive"] }

unicode-segmentation = "1.11.0"
strip-ansi-escapes = "0.2.0"

indexmap = "2.2.5"
crossterm = "0.27.0"
